# Wastenet-MLOps

./: .dockerignore  .env.example  .gitignore  404.html  Dockerfile  LICENSE  Makefile  README.md  dvc.yaml  index.html  mkdocs.yml  params.yaml  pyproject.toml  requirements-docs.txt  sitemap.xml
.dvc/: config
.github/workflows/: ci.yml  docs.yml
api/: main.py
building-blocks/: index.html
context/: index.html
data/: raw.dvc
decisions/: index.html
decisions/0001-modele-convnext-timm/: index.html
decisions/0002-dvc-versioning-dagshub/: index.html
decisions/0003-mlflow-tracking-registry/: index.html
decisions/0004-strategie-partial-finetune/: index.html
decisions/0005-fastapi-docker-serving/: index.html
decisions/0006-evidently-drift-monitoring/: index.html
decisions/0007-optuna-grid-search-tuning/: index.html
decisions/0008-methodologie-tuning-incrementale/: index.html
deployment/: index.html
docs/: building-blocks.md  context.md  deployment.md  index.md  mkdocs.yml  monitoring.md  runtime.md
docs/decisions/: 0001-modele-convnext-timm.md  0002-dvc-versioning-dagshub.md  0003-mlflow-tracking-registry.md  0004-strategie-partial-finetune.md  0005-fastapi-docker-serving.md  0006-evidently-drift-monitoring.md  0007-optuna-grid-search-tuning.md  0008-methodologie-tuning-incrementale.md  index.md
docs/docs/: architecture.md  index.md
garbage_classification/: __init__.py  config.py  dataset.py  download_dataset.py  features.py  plots.py
garbage_classification/modeling/: predict.py  train.py  tune.py
metrics/: confusion_matrix.csv  eval_metrics.json  train_metrics.json  tune_best.json
monitoring/: build_reference.py  index.html  run_drift.py
monitoring/static/: embedding_drift.html  index.html
notebooks/: 01_eda.ipynb  02_visualize_transforms.ipynb
runtime/: index.html
search/: search_index.json
tests/: conftest.py  test_api.py  test_config.py  test_data.py  test_dataset.py
