[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "garbage_classification"
version = "0.0.1"
description = "MLOps project for automated waste classification from images using computer vision, with DVC pipelines, MLflow experiment tracking, FastAPI deployment, Docker, and CI/CD."
authors = [
  { name = "Mohamed" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tqdm",
    "typer",
    "kagglehub (==1.0.0)",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["garbage_classification"]
include = ["pyproject.toml", "garbage_classification/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["garbage_classification"]
force-sort-within-sections = true

