[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "garbage_classification"
version = "0.0.1"
description = "MLOps project for automated waste classification from images using computer vision, with DVC pipelines, MLflow experiment tracking, FastAPI deployment, Docker, and CI/CD."
authors = [
  { name = "Mohamed" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tqdm",
    "typer",
    "kagglehub (==1.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "torchvision (>=0.26.0,<0.27.0)",
    "dvc (>=3.67.1,<4.0.0)",
    "mlflow (>=3.10.1,<4.0.0)",
    "timm (>=1.0.26,<2.0.0)",
    "fastapi (>=0.135.3,<0.136.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "python-multipart (>=0.0.24,<0.0.25)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "evidently (==0.6.7)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "optuna (>=4.9.0,<5.0.0)",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["garbage_classification"]
include = ["pyproject.toml", "garbage_classification/**/*.py", "tests/**/*.py", "api/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["garbage_classification"]
force-sort-within-sections = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=garbage_classification --cov=api --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
omit = [
    "garbage_classification/modeling/train.py",
    "garbage_classification/modeling/predict.py",
    "garbage_classification/modeling/tune.py",
    "garbage_classification/features.py",
    "garbage_classification/plots.py",
    "garbage_classification/download_dataset.py",
]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"
[tool.poetry.dependencies]
torch = {source = "pytorch"}
torchvision = {source = "pytorch"}
